2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: Update from libiconv-1.6.
	* localcharset.c: Likewise.

2001-03-04  Bruno Haible  <haible@clisp.cons.org>

	* system.h (ISSLASH, HAS_DEVICE, IS_ABSOLUTE_PATH, IS_PATH_WITH_DIR,
	FILESYSTEM_PREFIX_LEN): New macros.
	(concatenated_pathname): New declaration.
	(SET_BINARY): New macro.
	* concatpath.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add concatpath.c.

2001-03-03  Bruno Haible  <haible@clisp.cons.org>

	* gen-lbrkprop.c: New file.
	* 3level.h: New file.
	* lbrkprop.h: New file, generated by gen-lbrkprop.
	* linebreak.h: New file.
	* linebreak.c: New file.
	* Makefile.am (EXTRA_DIST): Add gen-lbrkprop.c, 3level.h.
	(libnlsut_a_SOURCES): Add linebreak.c.
	(noinst_HEADERS): Add linebreak.h, lbrkprop.h.

	* c-ctype.h: New file.
	* c-ctype.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add c-ctype.c.
	(noinst_HEADERS): Add c-ctype.h.

	Allow the use of locale_charset() in src.
	* config.charset: New file, from ../intl/.
	* localcharset.c: New file, from ../intl/.
	* ref-add.sin: New file, from ../intl/.
	* ref-del.sin: New file, from ../intl/.
	* Makefile.am (EXTRA_DIST): Add config.charset, ref-{add,del}.sin.
	(libnlsut_a_SOURCES): Add localcharset.c.
	(DEFS): Define to set LIBDIR.
	(INCLUDES): Add -I. -I$(srcdir) -I.. to compensate for automake's
	default DEFS setting.
	(all-local, install-exec-local, uninstall-local, charset.alias): New
	targets.
	(SUFFIXES): New variable.
	(.sin.sed): New rule.
	(CLEANFILES): New variable.

2001-03-03  Bruno Haible  <haible@clisp.cons.org>

	* printf.h (PARAMS): GNU C always supports prototypes.
	* system.h (PARAMS): Likewise.

2001-03-05  Bruno Haible  <haible@clisp.cons.org>

	* vasprintf.c (int_vasprintf): Cast second arg of strtoul, to avoid
	warning.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

	* system.h (O_BINARY, O_TEXT, setmode, fileno): New macros for systems
	that distinguish between text and binary I/O.
